# uzawa

./: CMakeLists.txt  function.h  gauss.cpp  gauss.h  main.cpp  main_mpi.cpp  uzawa.cpp  uzawa_mpi.cpp
